assets/css/style.css
html,
body { overflow-x: hidden; }

p,
button,
a,
span,
div {
    font-family: 'Roboto', sans-serif !important;
    font-display: swap;
}

.brand-logo { padding-left: 0.5em !important; }

#fullLoginForm { 
    padding: 2em;
    width: 25rem;
}

#loginBtn { width: 8rem; }

.steps-table {
    position: relative;
}

.steps-table li { padding: 2px; }

.steps-table a {
    display: inline-block;
    font-weight: 300;
    color: #757575;
    padding-left: 16px;
    height: 1.5rem;
    line-height: 1.5rem;
    display: inline-block;
}

.steps-table a.active {
    font-weight: 500;
    padding-left: 14px;
    border-left: 2px solid #DCE4F2;
}

.checkbox-input,
.new-issue
label
span { 
    height: 25px !important;
    width: 100%;
}

div:focus { outline: none !important; }

.light-paragraph { font-weight: lighter; }

.custom-link { cursor: pointer; }
.hand { cursor: pointer; }
.no-select { user-select: none; }

.align-to-button {
    transform: translate(0, 25%);
}

.lato   { font-family: 'Lato'  , sans-serif !important; }
.roboto { font-family: 'Roboto', sans-serif !important; }

.thin       { font-weight: 150 !important; }
.regular    { font-weight: 300 !important; }
.medium     { font-weight: 400 !important; }

.small      { font-size: small !important; }

.fixed-height-btn { transform: translate(5px, 65%); }

#createPostBtn { margin-right: 1em; }

.word-wrap { word-break: break-word; }

.process-whitespaces { white-space: pre-line; }

.tap-target-content h5  { margin: 0.093333rem 0 .656rem 0; }
.tap-target-content p   {
    margin-top: 1em;
    line-height: 1.5;
}

.grecaptcha-badge { visibility: hidden; }

.pl-05 { padding-left: 0.5em; }

.soft-link { color: rgb(59, 225, 255); }

.mid-card-fab       { bottom: 2.45rem   !important; }
.mid-card-fab-icon  { font-size: 1.4rem !important; }

.preloader-bottom-small {
    top:            0.8em;
    margin-left:    0.5em;
    width:          28px !important;
    height:         28px !important;
}

